--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "iostream": "cpp",
         "iosfwd": "cpp",
         "*.tcc": "cpp"
-    }
+    },
+    "code-runner.runInTerminal": true
 }
